--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,13 @@
 <body>
     <h1>I am creating this page to learn Version Control</h1>
     <p>Prasana stop talking</p>
+    <ul>
+        <li>Akarsh</li>
+        <li>Adarsh</li>
+        <li>Shashank</li>
+        <li>Tejus</li>
+    </ul>
+
     
 </body>
 </html>
