updated the html files

--- a/Home.html
+++ b/Home.html
@@ -12,6 +12,8 @@
         <li>Adarsh</li>
         <li>Shashank</li>
         <li>Tejus</li>
+        <li>ShivRaj</li>
+        <li>Nishanth</li>
     </ul>
 
     
