--- a/Home.html
+++ b/Home.html
@@ -14,6 +14,11 @@
         <li>Tejus</li>
         <li>ShivRaj</li>
         <li>Nishanth</li>
+        <li>Monica</li>
+        <li>Gazala</li>
+
+        <li>Sanjana</li>
+        <li>Preksha</li>
     </ul>
 
     
