--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,17 @@
 
         <li>Sanjana</li>
         <li>Preksha</li>
+        
     </ul>
+
+    <ol>
+        <li>Computational thinking</li>
+        <li>Python</li>
+        <li>HTMl</li>
+        <li>CSS</li>
+        <li>JS</li>
+        <li>Git and Git Hub</li>
+    </ol>
 
     
 </body>
